Added dependencies Added docker configuration and database configuration Added Feature entity and mapper for mybatis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:postgresql://database:5432/person_database
+spring.datasource.username=db_user
+spring.datasource.password=testPasswordPleaseChange
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
