--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:postgresql://database:5432/person_database
+spring.datasource.url=jdbc:postgresql://database:5432/feature_database
 spring.datasource.username=db_user
 spring.datasource.password=testPasswordPleaseChange
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
